--- a/CSE/templates/hodconferencedetail.html
+++ b/CSE/templates/hodconferencedetail.html
@@ -1,14 +1,12 @@
-<h1>My Conference List</h1>
+<h1>Faculty Conference List</h1>
 <hr>
-{% if user.role == "HOD" %}
 <button><a href="{% url 'hodoptions' %}">Go back</a></button><br><br>
-{% else %}
-<button><a href="{% url 'options' %}">Go back</a></button><br><br>
-{% endif %}
-<button><a href="{% url 'conf-create' %}">Add Conference</a></button>
 <table border="5">
     <thead>
         <tr>
+            {% if user.role == "HOD" %}
+                <th>Faculty</th>
+            {% endif %}
             <th>Conference name</th>
             <th>Conference ID</th>
             <th>Conference doi</th>
@@ -19,6 +17,10 @@
     <tbody>
         {% for i in conferences %}
             <tr>
+            </td>
+            {% if user.role == "HOD" %}
+                <td>{{i.fac_name}}</td>
+            {% endif %}
                 <td>{{i.conference_name}}</td>
                 <td>{{i.conference_id}}</td>
                 <td>{{i.conference_doi}}</td>
