--- a/CSE/templates/login.html
+++ b/CSE/templates/login.html
@@ -3,7 +3,10 @@
     <form method="post" autocomplete="off">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Login">
+        <input type="submit" value="Login"><br><br>
+        Don't have an account ? <br>
+        Click here to register<button><a href="{% url 'register' %}">Register</a></button>
+        
     </form>
     {% if form.errors %}
         <p>Your username and password didn't match. Please try again.</p>
