--- a/CSE/templates/hodoption.html
+++ b/CSE/templates/hodoption.html
@@ -4,7 +4,7 @@
 <hr>
 <b>Published Conferences:</b><button><a href="{% url 'conferences' %}">Cick Here</a></button><br><br>
 <b>Published Journals:</b><button><a href="{% url 'journals' %}">Click Here</a></button><br><br><br>
-<h2>Faculties Publications</h2>
+<h2>Faculty Publications</h2>
 <hr>
 <b>Published Conferences:</b><button><a href="hodviewotherconf">Cick Here</a></button><br><br>
 <b>Published Journals:</b><button><a href="hodviewotherjourn">Click Here</a></button><br><br>
