--- a/CSE/templates/home.html
+++ b/CSE/templates/home.html
@@ -1,5 +1,5 @@
 <h1>Home Page</h1>
 <hr>
-<button><a href="{% url 'login' %}">Add Publications</a></button>
-<button><a href="">Post</a></button>
-<button><a href="">Event</a></button>
+<b>To add publications:</b><button><a href="{% url 'login' %}">Click Here</a></button><br><br>
+<b>To see the posts:</b><button><a href="">Click Here</a></button><br><br>
+<b>To see events:</b><button><a href="">Click Here</a></button><br><br>
