--- a/CSE/templates/hodviewconferencedetail.html
+++ b/CSE/templates/hodviewconferencedetail.html
@@ -27,8 +27,8 @@
                 <td>{{ i.ugc_listed }}</td>
                 <td>
                     {% if i.conference_article %}
-                      <a href="{{ i.conference_article.url }}" target="_blank" >View PDF</a>
-                      <a href="{{ i.conference_article.url }}" target="_blank" download>Downoad PDF</a>
+                      <button><a href="{{ i.conference_article.url }}" target="_blank" >View PDF</a></button>
+                      <button><a href="{{ i.conference_article.url }}" target="_blank" download>Downoad PDF</a></button>
                     {% endif %}
                 </td>
             </tr>
