--- a/CSE/templates/journaldetail.html
+++ b/CSE/templates/journaldetail.html
@@ -14,6 +14,8 @@
             <th>Journal doi</th>
             <th>Ugc list</th>
             <th>Journal article</th>
+            <th>Update</th>
+            <th>Delete</th>
         </tr>
     </thead>
     <tbody>
@@ -25,10 +27,19 @@
                 <td>{{ i.ugc_listed }}</td>
                 <td>
                     {% if i.journal_article %}
-                      <a href="{{ i.journal_article.url }}" target="_blank" >View PDF</a>
-                      <a href="{{ i.journal_article.url }}" target="_blank" download>Downoad PDF</a>
+                      <button><a href="{{ i.journal_article.url }}" target="_blank" >View PDF</a></button>
+                      <button><a href="{{ i.journal_article.url }}" target="_blank" download>Downoad PDF</a></button>
                     {% endif %}
                 </td>
+                <td>
+                    <form action="{% url 'journal_update' i.pk %}" method="get">
+                        <input type="submit" value="Update">
+                    </form>
+                </td>
+                <td>
+                    <button><a href="{% url 'journal_delete' i.pk %}">Delete</a></button>
+                </td>
+                
             </tr>
         {% endfor %}
     </tbody>
