--- a/CSE/templates/hodoption.html
+++ b/CSE/templates/hodoption.html
@@ -1,10 +1,6 @@
-<h1>View Publications!</h1>
-<hr><br><br>
-<h2>Your Publications</h2>
-<hr>
-<b>Published Conferences:</b><button><a href="{% url 'conferences' %}">Cick Here</a></button><br><br>
-<b>Published Journals:</b><button><a href="{% url 'journals' %}">Click Here</a></button><br><br><br>
-<h2>Faculty Publications</h2>
+<h1>Faculty Publications!</h1>
+
 <hr>
 <b>Published Conferences:</b><button><a href="hodviewotherconf">Cick Here</a></button><br><br>
 <b>Published Journals:</b><button><a href="hodviewotherjourn">Click Here</a></button><br><br>
+<button><a href="{% url 'hodhomeafterlogin' %}">Go Back</a></button>
