--- a/CSE/templates/login.html
+++ b/CSE/templates/login.html
@@ -2,7 +2,8 @@
 <hr>
     <form method="post" autocomplete="off">
         {% csrf_token %}
-        {{ form.as_p }}
+        Name:<input type="text" name="username" placeholder="Enter your name"><br><br>
+        Password:<input type="password" name="password" placeholder="Enter password"><br><br>
         <input type="submit" value="Login"><br><br>
         Don't have an account ? <br>
         Click here to register<button><a href="{% url 'register' %}">Register</a></button>
