--- a/CSE/templates/otherhomeafterlogin.html
+++ b/CSE/templates/otherhomeafterlogin.html
@@ -2,4 +2,5 @@
 <hr>
 <b>To see the posts:</b><button><a href="">Click Here</a></button><br><br>
 <b>To see events:</b><button><a href="">Click Here</a></button><br><br>
-<b>To Login:</b><button><a href="{% url 'login' %}">Login</a></button>
+<b>To add your Publications:</b><button><a href="{% url 'otheroptions' %}">Click here</a></button><br><br>
+
