--- a/CSE/templates/otherhomeafterlogin.html
+++ b/CSE/templates/otherhomeafterlogin.html
@@ -3,4 +3,4 @@
 <b>To see the posts:</b><button><a href="">Click Here</a></button><br><br>
 <b>To see events:</b><button><a href="">Click Here</a></button><br><br>
 <b>To add your Publications:</b><button><a href="{% url 'otheroptions' %}">Click here</a></button><br><br>
-
+<button><a href="{% url 'logout' %}">Logout</a></button>
